--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_USERNAME="brusselsbrews"
-DB_PASSWORD="FunkyMonkeyIP8"
-DB_HOSTNAME="demofullstack.mysql.database.azure.com"
-DOCS_URL="/documentation"
+DB_USERNAME=brusselsbrews
+DB_PASSWORD=FunkyMonkeyIP8
+DB_HOSTNAME=demofullstack.mysql.database.azure.com
+DOCS_URL=/documentation
