--- a/.github/workflows/buildAndDeployOnVercel.yml
+++ b/.github/workflows/buildAndDeployOnVercel.yml
@@ -16,5 +16,4 @@ jobs:
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel --force deploy --prod --token=${{ secrets.VERCEL.TOKEN }}
-        
+        run: vercel --force deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
