--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_USERNAME=brusselsbrews
 DB_PASSWORD=FunkyMonkeyIP8
 DB_HOSTNAME=demofullstack.mysql.database.azure.com
 DOCS_URL=/documentation
-ALLOWED_ORIGINS=http://localhost,https://localhost,http://127.0.0.1:8080,https://127.0.0.1:8080,https://brusselsbrews.netlify.app
+ALLOWED_ORIGINS=http://localhost,https://localhost,http://127.0.0.1:8080,https://127.0.0.1:8080,https://1wt-brussels-brews.netlify.app,*
